--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>CGPA Calculator</title>
 </head>
 <body>
+    <header class="system">
+        <h2>GPA Calculator for A, B+, B, C+,C, D+,D system</h2>
+    </header>
+    <div class="menu">
+        <h2 class="title">Click on the Buttons to Contine!</h2>
+        <div class="container">
+            <button class="items" id="cgpa">CGPA</button>
+            <button class="items" id="gpa">GPA</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
