--- a/gpa.html
+++ b/gpa.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GPA</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="gpa">
+        <div class="inputField">
+            <input type="text" class="input" id="semesterno" placeholder="Enter your semester number">
+            <input type="text" class="input" id="subjects" placeholder="Enter Total Subjects in Semesters">
+            <button class="Enterbutton" id="enterbutton">Enter</button>
+        </div>
+    </header>
+    <main id="subjectSection">
+        <div class="subjects">
+            <h3 id="SemesterNo">Semester No.</h3>
+            <h3 id="totalsubjects">Total Subjects.</h3>
+        </div>
+        <div class="subjects">
+
+        </div>
+    </main>
+    <footer>
+        <div id="gpacalculated">
+        </div>
+    </footer>
 </body>
 </html>
