--- a/gpa.html
+++ b/gpa.html
@@ -11,22 +11,26 @@
     <header class="gpa">
         <div class="inputField">
             <input type="text" class="input" id="semesterno" placeholder="Enter your semester number">
-            <input type="text" class="input" id="subjects" placeholder="Enter Total Subjects in Semesters">
+            <input type="text" class="input" id="Noofsubjects" placeholder="Enter Total Subjects in Semesters">
             <button class="Enterbutton" id="enterbutton">Enter</button>
         </div>
     </header>
     <main id="subjectSection">
+
         <div class="subjects">
             <h3 id="SemesterNo">Semester No.</h3>
             <h3 id="totalsubjects">Total Subjects.</h3>
         </div>
-        <div class="subjects">
+        
+        <div class="subjectsdiv" id="subjects">
 
         </div>
+    
     </main>
     <footer>
         <div id="gpacalculated">
         </div>
     </footer>
+    <script src="gpaJS.js"></script>
 </body>
 </html>
