--- a/CGPA/cgpa.html
+++ b/CGPA/cgpa.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="cgpa.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <input type="text" class="input" id="TotalSemesterinput" placeholder="How Many Semesters You Have Studied">
+            <button class="Enterbutton" id="enterbutton">Enter</button>
+        </div>
+    </header>
+    <main>
+        <div class="cgpainput" id="cgpainput">
+            
+        </div>
+    </main>
+    <footer>
+        <div id="gpacalculated">
+        </div>
+    </footer>
     <script src="cgpa.js"></script>
 </body>
 </html>
