--- a/GPA/index.html
+++ b/GPA/index.html
@@ -18,8 +18,8 @@
     <main id="subjectSection">
 
         <div class="subjects">
-            <h3 id="SemesterNo">Semester No.</h3>
-            <h3 id="totalsubjects">Total Subjects.</h3>
+            <h3 id="SemesterNo">Semester No:</h3>
+            <h3 id="totalsubjects">Total Subjects:</h3>
         </div>
         
         <div class="subjectsdiv" id="subjects">
