--- a/GPA/index.html
+++ b/GPA/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header class="gpa">
+        <div id="error"></div>
         <div class="inputField">
             <input type="text" class="input" id="semesterno" placeholder="Enter your semester number">
             <input type="text" class="input" id="Noofsubjects" placeholder="Enter Total Subjects in Semesters">
