--- a/CGPA/index.html
+++ b/CGPA/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <div id="error"></div>
         <div class="container">
             <input type="text" class="input" id="TotalSemesterinput" placeholder="How Many Semesters You Have Studied">
             <button class="Enterbutton" id="enterbutton">Enter</button>
